--- a/package.json
+++ b/package.json
@@ -2,11 +2,21 @@
   "name": "xiulin-translator",
   "version": "1.0.0",
   "description": "命令行翻译助手",
-  "main": "index.js",
+  "bin": {
+    "translator": "./index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["translate"],
+  "keywords": [
+    "translate"
+  ],
   "author": "web.xiulin@gmail.com",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "commander": "^2.11.0",
+    "http": "0.0.0",
+    "md5": "^2.2.1",
+    "querystring": "^0.2.0"
+  }
 }
